--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\Programador 1\\Documents\\NetBeansProjects\\arquisoft\\com.mysql.jdbc_5.1.5.jar
+file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\Programador 1\\Documents\\NetBeansProjects\\arquitectsoft2021\\com.mysql.jdbc_5.1.5.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Poseidon\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\Programador 1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
