confiemando cambios trabajados

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\danid\\OneDrive\\Documentos\\PROYECTO\\arquitectsoft2021\\mysql-connector-java-8.0.11.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Poseidon\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\Programador 1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
