confiemando cambios trabajados

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,8 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=arquitectSoft
-application.vendor=Programador 1
+application.vendor=Poseidon S.A.S
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,14 +30,12 @@ dist.jar=${dist.dir}/arquitectSoft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.13-bin.jar=mysql-connector-java-5.1.13-bin.jar
 file.reference.mysql-connector-java-8.0.11.jar=mysql-connector-java-8.0.11.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
