confiemando cambios trabajados

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,23 @@ dist.jar=${dist.dir}/arquitectSoft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.dom4j-1.6.jar=LIBRERIAS EXCEL/dom4j-1.6.jar
 file.reference.mysql-connector-java-8.0.11.jar=mysql-connector-java-8.0.11.jar
+file.reference.poi-3.7-20101029.jar=LIBRERIAS EXCEL/poi-3.7-20101029.jar
+file.reference.poi-ooxml-3.7-20101029.jar=LIBRERIAS EXCEL/poi-ooxml-3.7-20101029.jar
+file.reference.poi-ooxml-schemas-3.9.jar=LIBRERIAS EXCEL/poi-ooxml-schemas-3.9.jar
+file.reference.xmlbeans-2.3.0.jar=LIBRERIAS EXCEL/xmlbeans-2.3.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.dom4j-1.6.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}:\
+    ${file.reference.poi-ooxml-3.7-20101029.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.9.jar}:\
+    ${file.reference.xmlbeans-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
